# groma

./: .gitignore  1) Cargo.toml  2) .gromaignore  Cargo.toml  README.md  README_LANCEDB.md  example_usage.md  test_lancedb_mcp.sh  test_mcp.py  test_mcp_full.py
.github/workflows/: ci.yml
scripts/: gromaload.jq  gromaprompt.jq  test_fastembed_cache.sh  test_mcp_changes.md  test_mcp_logging.sh
src/: common.rs  lancedb_main.rs  lancedb_main_fixed.rs  lib.rs  main.rs  mcp_server.rs  vector_store.rs  vector_store_lancedb.rs  vector_store_qdrant.rs
