[package]
name = "groma"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "groma"
path = "src/main.rs"
required-features = ["qdrant"]

[[bin]]
name = "groma-lancedb"
path = "src/lancedb_main.rs"
required-features = ["lancedb"]

[profile.release]
debug = true # Enable debug symbols in release builds

# rig-openrouter = "0.11" # Removed - OpenRouter is part of rig crate features

[dependencies]
# Use rig-core from GitHub
rig-core = { git = "https://github.com/lambdamechanic/rig" }
once_cell = "1.18.0"

# Vector store backends (Qdrant is default, LanceDB is optional)
rig-qdrant = { version = "0.1.12", optional = true }
qdrant-client = { version = "1.14.0", optional = true }
lancedb = { version = "0.21", optional = true }
arrow-array = { version = "55", optional = true }
arrow-schema = { version = "55", optional = true }

clap = { version = "4.4", features = ["derive", "env"] } # Add 'env' feature
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4" # Keep for now, might remove later if fully replaced
git2 = "0.19" # Add git2 crate
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For state serialization
futures = "0.3"
# tabled = "0.15" # Removed tabled dependency
uuid = { version = "1.16.0", features = ["v5"] } # Update UUID and enable v5 for path hashing
url = "2.5" # For parsing Qdrant URL
text-splitter = { version = "0.4.5", features = ["tiktoken-rs"] } # For chunking text by tokens (Specify patch)
tiktoken-rs = "0.5" # Required by text_splitter feature
ignore = "0.4" # For filtering output using .gromaignore
chrono = "0.4" # For timestamp formatting in logs
async-trait = "0.1" # For async trait implementations

# MCP Server dependencies - always included
mcp-core = { path = "src/mcp-sdk/mcp-core" }
mcp-server = { path = "src/mcp-sdk/mcp-server" }
tower-service = "0.3" # Required for Service trait
pin-project = "1.1" # Required for pin-project macro
md5 = "0.8.0"
fastembed = "5.0.2"

[features]
default = ["qdrant"]
qdrant = ["rig-qdrant", "qdrant-client"]
lancedb = ["dep:lancedb", "arrow-array", "arrow-schema"]
